--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     ]
   },
   "devDependencies": {
-    "miragejs": "^0.1.40"
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.5",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "miragejs": "^0.1.40",
+    "typescript": "^4.3.4",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
