--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-router-dom": "^5.1.7",
     "miragejs": "^0.1.40",
     "typescript": "^4.3.4",
     "typescript-plugin-css-modules": "^3.4.0"
