--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
+    "@types/faker": "^5.5.6",
     "classnames": "^2.3.1",
     "faker": "^5.0.0",
     "formik": "^2.1.5",
