--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "@types/faker": "^5.5.6",
+    "@types/superagent": "^4.1.12",
     "classnames": "^2.3.1",
     "faker": "^5.0.0",
     "formik": "^2.1.5",
