--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/faker": "^5.5.6",
     "@types/superagent": "^4.1.12",
     "classnames": "^2.3.1",
+    "eslint-plugin-import": "^2.23.4",
     "faker": "^5.0.0",
     "formik": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
@@ -31,7 +32,14 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": [
+      "eslint-plugin-import"
+    ],
+    "rules": {
+      "no-console": "warn",
+      "import/no-cycle": "warn"
+    }
   },
   "browserslist": {
     "production": [
