--- a/package.json
+++ b/package.json
@@ -54,11 +54,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.4.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "cypress": "^8.0.0",
     "miragejs": "^0.1.41",
     "typescript": "^4.3.5",
     "typescript-plugin-css-modules": "^3.4.0"
