--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-router-dom": "^5.1.8",
     "cypress": "8.4.0",
     "miragejs": "^0.1.41",
+    "prettier": "^2.4.1",
     "typescript": "^4.3.5",
     "typescript-plugin-css-modules": "^3.4.0"
   }
