--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/superagent": "^4.1.12",
     "axios": "^0.23.0",
     "classnames": "^2.3.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.23.4",
     "faker": "^5.0.0",
     "formik": "^2.1.5",
@@ -32,14 +33,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app",
-    "plugins": [
-      "eslint-plugin-import"
-    ],
-    "rules": {
-      "no-console": "warn",
-      "import/no-cycle": "warn"
-    }
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -61,6 +58,12 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "cypress": "8.4.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-testing-library": "^4.12.4",
     "miragejs": "^0.1.41",
     "prettier": "^2.4.1",
     "typescript": "^4.3.5",
