fix: Jest & Cypress types conflict

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,8 @@
       ],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
-        "project": "./tsconfig.json"
+        "tsconfigRootDir": "./",
+        "project": "./tsconfig.eslint.json"
       },
       "extends": [
         "plugin:import/typescript",
