--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,15 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
+    "isolatedModules": false,
+    "noEmit": true,
     "types": [
       "cypress",
       "@testing-library/cypress"
     ]
-  }
+  },
+  "include": [
+    "../node_modules/cypress",
+    "./**/*"
+  ]
 }
