chore: Update cypress

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
-    "cypress": "8.4.0",
+    "cypress": "^9.1.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-prettier": "^8.3.0",
