--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-import": "^2.23.4",
     "faker": "^5.5.3",
     "formik": "^2.1.5",
+    "jose": "^4.3.7",
     "jsonwebtoken": "^8.5.1",
     "miragejs": "^0.1.43",
     "node-sass": "^6.0.1",
