--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,12 @@
     "arrow-body-style": "off",
     "react/require-default-props": "off",
     "react/prop-types": "warn",
+    "react/jsx-props-no-spreading": [
+      "error",
+      {
+        "html": "ignore"
+      }
+    ],
     "import/prefer-default-export": "off",
     "import/no-cycle": "warn",
     "import/extensions": "off",
