--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,10 +37,7 @@
     "react/require-default-props": "off",
     "react/prop-types": "warn",
     "react/jsx-props-no-spreading": [
-      "error",
-      {
-        "html": "ignore"
-      }
+      "off"
     ],
     "import/prefer-default-export": "off",
     "import/no-cycle": "warn",
