--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js||jsx|ts|tsx)\"",
     "check-types": "tsc",
     "check-format": "npm run prettier -- --list-different",
-    "validate": "npm run check-types && npm run check-format && npm run lint"
+    "validate": "npm run check-types && npm run check-format && npm run lint",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -71,6 +72,7 @@
     "eslint-plugin-testing-library": "^5.0.1",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript-plugin-css-modules": "^3.4.0",
+    "husky": "^8.0.0"
   }
 }
