--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "typescript-plugin-css-modules": "^3.4.0",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3"
   }
 }
