--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "cross-env": "^7.0.3",
     "cypress": "^9.2.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -70,10 +71,10 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest-dom": "^4.0.1",
     "eslint-plugin-testing-library": "^5.0.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.3"
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
