--- a/.github/workflows/general-checks.yml
+++ b/.github/workflows/general-checks.yml
@@ -17,3 +17,8 @@ jobs:
         run: npm run check-types
       - name: Run jest tests
         run: npm test
+      - name: Run cypress tests
+        uses: cypress-io/github-action@v4
+        with:
+          start: npm start
+          wait-on: 'http://localhost:3000'
