chore: Update dependencies

--- a/package.json
+++ b/package.json
@@ -3,27 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.0",
-    "@types/faker": "^5.5.9",
-    "axios": "^0.23.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "faker": "^5.5.3",
-    "formik": "^2.1.5",
-    "jose": "^4.3.7",
-    "miragejs": "^0.1.43",
+    "eslint-import-resolver-typescript": "^3.4.0",
+    "formik": "^2.2.9",
+    "jose": "^4.8.3",
+    "miragejs": "^0.1.45",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
-    "redux": "^4.1.2",
-    "superagent": "^6.1.0"
+    "react-icons": "^4.4.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -60,23 +57,23 @@
   "devDependencies": {
     "@testing-library/cypress": "^8.0.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.0",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/node": "^16.11.47",
+    "@types/react": "^17.0.48",
+    "@types/react-dom": "^17.0.17",
+    "@types/react-router-dom": "^5.3.3",
     "cross-env": "^7.0.3",
-    "cypress": "^9.2.1",
+    "cypress": "^10.4.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest-dom": "^4.0.1",
-    "eslint-plugin-testing-library": "^5.0.1",
-    "husky": "^8.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-testing-library": "^5.6.0",
+    "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
