--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react": "^17.0.48",
     "@types/react-dom": "^17.0.17",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/node": "^2.5.26",
     "cross-env": "^7.0.3",
     "cypress": "^10.4.0",
     "eslint-config-airbnb": "^19.0.4",
