--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
+    "prisma": "^4.5.0",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
