--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "zod": "^3.19.1"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
