--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "sass": "^1.56.1",
     "zod": "^3.19.1"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
@@ -88,6 +91,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prisma": "^4.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0"
   }
