--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "formik": "^2.2.9",
     "jose": "^4.8.3",
     "miragejs": "^0.1.45",
-    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "sass": "^1.56.1"
   },
   "scripts": {
     "start": "react-scripts -r @cypress/instrument-cra start",
