chore: Replace react-scripts with next

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "formik": "^2.2.9",
     "jose": "^4.8.3",
     "miragejs": "^0.1.45",
+    "next": "^13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "sass": "^1.56.1",
     "zod": "^3.19.1"
   },
@@ -26,11 +26,11 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start:coverage": "react-scripts -r @cypress/instrument-cra start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:staged": "cross-env CI=true react-scripts test --env=jsdom --findRelatedTests",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
+    "test": "npm test",
+    "test:staged": "cross-env CI=true npm test --env=jsdom --findRelatedTests",
     "coverage": "npm-run-all -p coverage:cypress coverage:jest -s coverage:copy coverage:merge coverage:combined",
     "coverage:copy": "cp cypress_coverage/coverage-final.json reports/from-cypress.json && cp jest_coverage/coverage-final.json reports/from-jest.json",
     "coverage:merge": "npx nyc merge reports && mv coverage.json .nyc_output/out.json",
