--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "dependencies": {
     "@prisma/client": "^4.6.1",
     "@reduxjs/toolkit": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
@@ -29,7 +26,7 @@
     "dev": "next dev",
     "start": "next start",
     "build": "next build",
-    "test": "npm test",
+    "test": "jest",
     "test:staged": "cross-env CI=true npm test --env=jsdom --findRelatedTests",
     "coverage": "npm-run-all -p coverage:cypress coverage:jest -s coverage:copy coverage:merge coverage:combined",
     "coverage:copy": "cp cypress_coverage/coverage-final.json reports/from-cypress.json && cp jest_coverage/coverage-final.json reports/from-jest.json",
@@ -71,7 +68,10 @@
     "@cypress/code-coverage": "^3.10.0",
     "@cypress/instrument-cra": "^1.4.0",
     "@testing-library/cypress": "^8.0.7",
-    "@types/jest": "^26.0.24",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.2.3",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
@@ -87,6 +87,8 @@
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
