--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,10 +3,9 @@
   "compilerOptions": {
     "isolatedModules": false,
     "noEmit": true,
-    "types": [
-      "cypress",
-      "@testing-library/cypress"
-    ]
+    "target": "es5",
+    "lib": [ "es5", "dom" ],
+    "types": [ "cypress", "@testing-library/cypress", "node" ]
   },
   "include": [
     "../node_modules/cypress",
