--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "coverage:jest": "npm test -- --coverage --watchAll=false --coverageDirectory=./jest_coverage",
     "coverage:cypress": "cypress run",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "lint": "next lint --dir src --dir prisma --dir cypress",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js||jsx|ts|tsx)\"",
     "check-types": "tsc",
     "check-format": "npm run prettier -- --list-different",
@@ -45,12 +45,6 @@
   },
   "nyc": {
     "report-dir": "cypress_coverage"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -75,15 +69,19 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "@vercel/node": "^2.6.2",
     "cross-env": "^7.0.3",
     "cypress": "^11.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "13.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-jest-dom": "^4.0.3",
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.1",
@@ -94,7 +92,6 @@
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "typescript": "^4.9.3"
   }
 }
