--- a/.github/workflows/general-checks.yml
+++ b/.github/workflows/general-checks.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Run cypress tests
         uses: cypress-io/github-action@v4
         with:
-          start: npm dev
+          start: npm run dev
           wait-on: 'http://localhost:3000'
