--- a/.github/workflows/general-checks.yml
+++ b/.github/workflows/general-checks.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Run jest tests
         run: npm test
       - name: Run cypress tests
+        env:
+          DATABASE_URL: ${{secrets.DATABASE_URL}}
         uses: cypress-io/github-action@v4
         with:
           start: npm run dev
