--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "cookie": "^0.5.0",
     "formik": "^2.2.9",
     "jose": "^4.11.1",
     "miragejs": "^0.1.46",
@@ -66,6 +67,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/cookie": "^0.5.1",
     "@types/jest": "^29.2.3",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.26",
